<resources>
    <string name="app_name">LocalTrader</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Error texts -->
    <string name="error_unknown"> Ismeretlen hiba miatt nem sikerült a művelet!</string>
    <string name="error_missing_image"> A kép feltöltése kötelező!</string>
    <string name="error_missing_description"> A leírás kötelező!</string>
    <string name="error_missing_location"> A vállalkozás létrehozásához szükséges a helyadatok megadása! </string>
    <string name="error_failed_picture_upload"> "Nem sikerült feltölteni a képet. Próbálja újra később!" </string>
    <string name="error_picture_share"> "Nem sikerült a kép megosztása!" </string>
    <string name="error_business_name">A vállalkozás nevének legalább 3 karakterből kell állnia!</string>
    <string name="error_business_description">A vállalkozás leírása kötelező!</string>

    <!--Notification Dialog texts -->
    <string name="notification_location_data">Az alkalmazás helyadatokat használ annak érdekében, hogy jobb szolgáltatásokat nyújtson, valamint személyre szabott ajánlásokat jelenítsen meg. A helyadatok felhasználását később is engedélyezheti az eszköz beállításaiban.</string>


    <!--OnBoarding screen -->
    <string name="onboard_first_header">Üdvözöl a LocalTrader!</string>
    <string name="onboard_first_text"> Köszönjük, hogy az applikációnkat választotta! Mindent megteszünk annak érdekében, hogy Önnek a lehető legjobb felhasználói élményt nyújtsuk!</string>
    <string name="onboard_second_header"> Vállalkozások </string>
    <string name="onboard_second_text"> Fedezzen fel közeli kézműves kisvállalkozókat és lépjen kapcsolatba velük, ha megtetszik egy általuk hírdetett termék, vagy ajda el saját kézműves termékeit.</string>
    <string name="onboard_third_header"> Rendelések kezelése</string>
    <string name="onboard_third_text"> Kezelje egyszerűen a saját vagy vállakozása rendeléseit egy könnyed és leegyszerüsített rendszer segítségével. Indítson beszélgetéseket a termékek átvételével és kézbesítésével kapcsolatban és használja az általunk bíztosított statisztikai adatokat.</string>

    <!-- Authentication -->
    <string name="registration_text"> Regisztráció </string>
    <string name="firstname_text"> Vezetéknév </string>
    <string name="lastname_text"> Keresztnév </string>
    <string name="email_text"> E-mail </string>
    <string name="password_text"> Jelszó </string>
    <string name="passwordAgain_text"> Jelszó ismét </string>
    <string name="registrationDescription">A regisztrációhoz kérjük adja meg az adatait!</string>
    <string name="isAccountExists"> Van már fiókja? </string>
    <string name="isAccountExists2"> Jelentkezzen be! </string>
    <string name="next"> Tovább </string>
    <string name="profilePicture_text"> Profilkép beállítása</string>
    <string name="prfilePicture_description"> Beállíthat egy profilképet. Ezt a későbbiekben is megteheti a profilon.</string>
    <string name="skip">Kihagyás</string>
    <string name="login_header"> Bejelentkezés </string>
    <string name="login_description"> Adja meg a az adatokat amelyekkel regisztrált!</string>
    <string name="isAccountNotExists"> Nincs még fiókja? </string>
    <string name="isAccountNotExists2"> Hozzon létre egyet! </string>
    <string name="accept_terms"> Elfogadom és regisztrálok </string>
    <string name="terms_description">A regisztrációval elfogadja a <font fgcolor='#02b7db'>Felhasználási feltételeket</font></string>

    <!-- Bottom nav menu -->
    <string name="mainIcon"> Kezdőlap </string>
    <string name="feedIcon"> Felfedezés </string>
    <string name="ordersIcon"> Rendelések </string>
    <string name="profileIcon"> Profil </string>
    <string name="chatIcon"> Üzenetek </string>


    <!-- Timeline -->
    <string name="RON"> RON </string>
    <string name="timeline_greeting1"> Jó reggelt </string>
    <string name="timeline_greeting2"> Jó napot </string>
    <string name="timeline_greeting3"> Jó estét </string>
    <string name="header_conversation">Összeállítottuk önnek a felfedezési listáját!</string>
    <string name="recommended_products"> Népszerű termékek </string>
    <string name="popular_firms"> Ajánlott vállalkozások </string>
    <string name="exclamation_mark">!</string>
    <string name="press_again_to_exit"> A kilépéshez nyomja meg megint!</string>

    <!-- Profile -->
    <string name="my_business"> Vállalkozásom </string>
    <string name="create_business"> Új vállalkozás</string>
    <string name="logout"> Kijelentkezés </string>
    <string name="favoritesText"> Kedvencek </string>
    <string name="report_bug"> Hiba jelentése</string>
    <string name="logout_confirmation"> Biztosan kijelentkezik?</string>

    <!-- Creating business -->
    <string name="createBusinessHeader1"> Vállakozás profilja </string>
    <string name="createBusinessText1"> Adja meg a vállalkozás nevét és társítson hozzá egy logót, amelyről majd felismerik a vásárlók, valamint egy rövid leírást.</string>
    <string name="business_name"> Vállalkozás neve</string>
    <string name="business_description"> Leírás </string>
    <string name="categories"> Kategóriák: </string>
    <string name="createBusinessHeader2"> Elérhetőségek </string>
    <string name="createBusinessText2"> Megadhatja a vállalkozás elérhetőségeit.</string>
    <string name="telephone">Telefonszám</string>
    <string name="location">Település</string>
    <string name="facebookURL">Facebook link (opcionális)</string>
    <string name="instagramURL">Instagram link (opcionális)</string>
    <string name="create">Létrehoz</string>

    <!-- Business profile -->
    <string name="add_new_product"> Új termék </string>
    <string name="business_rating"> Értékelés </string>
    <string name="business_product_number"> Termékszám </string>
    <string name="business_no_items"> Nincs megjeleníthető termék. Nézzen vissza később! </string>


    <!-- Creating product -->
    <string name="adding_product_header"> Termék feltöltése </string>
    <string name="adding_product_description"> Egy termék feltöltéséhez válasszon vagy készítsen egy képet és adja meg a hozzá tartozó adatokat!</string>
    <string name="product_name"> Termék neve</string>
    <string name="product_description"> Termék leírása</string>
    <string name="product_price"> Termék ára </string>
    <string name="product_starter_price"> 0.00 </string>

    <!-- Product Profile -->
    <string name="order_button"> Rendelés </string>
    <string name="like_failed"> Nem sikerült hozzáadni a kedvencekhez </string>

    <!-- Product Grid -->
    <string name="product_grid_no_items"> A termékek galériája jelenleg üres! </string>

    <!-- Modal dialog -->
    <string name="view"> Megtekintés </string>
    <string name="share"> Megosztás </string>
    <string name="delete"> Törlés </string>
    <string name="delete_confirmation"> Bíztosan törli ez a terméket? </string>
    <string name="yes"> Igen </string>
    <string name="no"> Nem </string>

    <!-- Create order -->
    <string name="create_order_header"> Rendelés feladása </string>
    <string name="create_order_description"> Válassza ki a kívánt mennyiséget majd küldje el a megrendelést. Ezt követően a vállalkozó elfogadja
    ezt és mi értesítést küldünk önnek.</string>
    <string name="additional_comment"> Megjegyzés (Opcionális) </string>
    <string name="send"> Küldés </string>
    <string name="create_order_verification">A rendelést elküldjük a vállalkozónak. Miután a vállalkozó elfogadta ezt, értesítést küldünk önnek. Bíztosan elküldi a rendelést?</string>

    <!-- Orders -->
    <string name="client_orders"> Saját rendelések</string>
    <string name="business_orders"> Vállalkozás rendelései </string>
    <string name="order_status_not_confirmed">Megerősítésre vár</string>
    <string name="order_status_accepted">Elfogadva</string>
    <string name="order_status_declined">Elutasítva</string>
    <string name="order_status_working_on_it"> Folyamatban </string>
    <string name="order_status_done"> Elkészítve </string>
    <string name="no_orders_yet">Jelenleg nincsenek megrendelések!</string>
    <string name="chat_editText_hint"> Gépelje be az üzenetet…</string>
    <string name="accept_order"> Elvállalja a rendelést?</string>

    <!-- Favorites -->
    <string name="delete_favorite"> Bíztosan törli a kedvencek közül? </string>
    <string name="favorites_no_items"> Jelenleg nincs egy termék sem elmentve a kedvencei közé! </string>

    <!-- Statistics -->
    <string name="statistics"> Statisztikák </string>
    <string name="monthlySale_count"> Havi eladások </string>

    <!-- Bug report -->
    <string name="bug_report_header">Hiba jelentése</string>
    <string name="bug_report_description"> Kérjük jelezze, ha bármilyen hibát észlelt az applikáció működésében vagy megjelenésében.</string>
    <string name="type_of_bug">Hiba típusa:</string>
    <string name="bug_description">Leírás</string>
    <string name="bug_description_hint">Írja le részletesen a tapasztalt hibát…</string>
    <string name="thanks_the_report"> Köszönjük a visszajelzést!</string>


    <!-- Messages -->
    <string name="messages_header"> Üzenetek </string>
    <string name="messages_no_items"> A beszélgetései itt fognak megjelenni. </string>

    <!--Feed -->
    <string name="feed_no_more_text"> A felfedezési lista végére ért!</string>

    <string name="ok"> OK </string>


    <string name="placeholderText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>

    <!-- MAP -->
    <string name="done"> Kész </string>
    <string name="title_activity_business_location">Map</string>
    <string name="map_header_description"> A vállalkozás létrehozásához szükségünk van a helyadatokra. Ez más felhasználók számára nem publikus és csak arra használjuk fel, hogy főként olyan felhasználók számára ajánljuk a vállalkozást, akik a közelben vannak. Módosíthatja az általunk kiválasztott koordinátákat.</string>
    <string name="map_header"> Helyadatok</string>


</resources>